Inmob-Salesforce/force-app/main/default/objects/Descuento__c/Descuento__c.object-meta.xml
<CustomObject>
    <label>Descuento</label>
    <nameField>
        <displayFormat>DSC# {YYYY}{MM}-{0000000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Descuentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>