Inmob-Salesforce/force-app/main/default/objects/Descuento__c/fields/DescuentoEjecutivo__c.field-meta.xml
<CustomField>
    <fullName>DescuentoEjecutivo__c</fullName>
    <label>Descuento Ejecutivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>