Inmob-Salesforce/force-app/main/default/objects/Descuento__c/fields/DescuentoGerente__c.field-meta.xml
<CustomField>
    <fullName>DescuentoGerente__c</fullName>
    <label>Descuento Gerente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>