Inmob-Salesforce/force-app/main/default/objects/Descuento__c/fields/DescuentoJefe__c.field-meta.xml
<CustomField>
    <fullName>DescuentoJefe__c</fullName>
    <label>Descuento Jefe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>