Inmob-Salesforce/force-app/main/default/objects/Descuento__c/fields/MesesEntrega__c.field-meta.xml
<CustomField>
    <fullName>MesesEntrega__c</fullName>
    <label>Meses de Entrega</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>