Inmob-Salesforce/force-app/main/default/objects/Descuento__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Descuentos</relationshipLabel>
    <relationshipName>Descuentos</relationshipName>
    <type>Lookup</type>
</CustomField>